# ccbox

./: .gitignore  LICENSE  README.md  hello-caffe.py
boost/first_lambda/: CMakeLists.txt  first.cpp
boost/regex/: CMakeLists.txt  main.cpp
boost/thread/: 00readme.md  CMakeLists.txt  func.cpp  func.h  main.cpp  setting.json  simplenotify.cpp  simplenotify.h
data/: all.json  setting.json  test.json  usepbox.json
gsl/first/: 00readme.md  CMakeLists.txt
gsl/stat/: CMakeLists.txt  main.cpp  test.cpp
mycurl/: CMakeLists.txt  README.md  Readme.md  curlutil.cpp  curlutil.h  fetch_imgur.cpp  fetch_imgur.h  main.cpp  mycurl.cpp  qweather.cpp  qweather.h  setting.json  yahoo-weather-query.py
myqrc/: 00Readme.md  CMakeLists.txt  Readme.md  download.js  main.cpp  test.cpp  test.h
mytool/: CMakeLists.txt  Readme.md  hsv2rgb.cpp  mytool.cpp  mytool.h  mytool_internal.h  ptz.cpp  util.cpp
mytool/stupid/: CMakeLists.txt  main.cpp
opencv/: .gitignore  CMakeLists.txt  Readme.md  img_add_border.py  realsense-opencv-hough.py
opencv/capture/: .gitignore  CMakeLists.txt  Capture.md  Readme.md  a.cpp  captureDemo.cpp  common.h  cv_custom_type.h  cvui.h  cvutil.cpp  cvutil.h  dist.cpp  dist.h  fe2d.cpp  fixdep.cpp  go.sh  gofix.pl  main.cpp  miscutil.cpp  miscutil.h  readset.cpp  readset.h  readsetting.cpp  readsetting.h  removebg.cpp  rs-imshow.cpp  rs-imshow.cpp.bak  rsutil.cpp  rsutil.h  setting.json
opencv/copypaste/: CMakeLists.txt  main.cpp  setting.json
opencv/fileop/: CMakeLists.txt  Readme.md  main.cpp  setting.json  test.cpp
opencv/hello/: CMakeLists.txt  main.cpp
opencv/imdecode/: .gitignore  00readme.md  Readme.md  imec.py  imgstr.py  main.cpp
opencv/multi-resize/: CMakeLists.txt  Readme.md  cvutil.cpp  cvutil.h  list2json.pl  main.cpp  setting.json
opencv/norm/: CMakeLists.txt  main.cpp
opencv/planer/: .gitignore  Readme.md  feature_homography.py  myutil.py  plane_tracker.py  readim.py  setting.json  show_saved.py
opencv/pnp/: CMakeLists.txt  Readme.md  main.cpp  marker.cpp
opencv/qrcode/: CMakeLists.txt  qrcode.cpp  sett.json
opencv/rectdraw/: CMakeLists.txt  Readme.md  draw.cpp  rectdraw.cpp
opencv/resize/: 00Readme.md  CMakeLists.txt  main.cpp  setting.json  test.cpp
opencv/simplecap/: CMakeLists.txt  fe2d.cpp  fe2d.json  findContours_demo.cpp  latch.cpp  main.cpp  sett.cpp  sett.h  surf.cpp  surfdemo.cpp  surfdemo.json  surflann.cpp  vec.cpp  vec.md  vec.py
opencv/single_eye/: 99.distortion.md  Readme.md  checkerutil.py  ircam.json  ircam.py  qrc.py  rs-auto-dist-marker.py  rs-check-calib.py  rs-est-dist.py  rs-findcheck.py  rs_auto_dist_marker.py  rs_check_calib.py  rs_est_dist.py  rs_findcheck.py  tp.py  webcam-est-dist.py  webcam-findcheck.py  webcam_est_dist.py  webcam_findcheck.py
opencv/socketest/: CMakeLists.txt  client.py  main.cpp  myutil.py  readset.cpp  readset.h  serv.py  setting.json  sockutil.py
opencv/tracking/: CMakeLists.txt  README.md  main.cpp  runtest.sh  samples_utility.hpp
opencv/viewer/: CMakeLists.txt  main.cpp
openvino/: Readme.md  openvino_fd.py
pbox/: CMakeLists.txt  MY_IPC.cpp  MY_IPC.hpp  Readme.md  foo.cpp  foo.h  pbox.cpp  pbox.h  pbox_internal.h  ptz.cpp  rs-imshow.cpp  util.cpp  util.h
rapidjson/: 00readme.md
rapidjson/foo/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
realcam/: CMakeLists.txt  rs_camera_test.cpp  rs_camera_test.hpp
rs/: Readme.md  align-depth2color.py  instric.py
rs/pcl/: CMakeLists.txt  Readme.md  cloud_viewer.cpp  read_ply.cpp
rs/python/: .gitignore  bag_show.py  d415  putil.py  read_bag_and_get_depth.py  read_bag_depth.py  record_bag.py  setvars.sh
rs/rs_height/: fc.py  myutil.py  setting.json
rs/rs_openpose/: run_openpose.sh
rs/rs_openpose/input_rs/: Rasmus221_Depth.raw  Rasmus222_Depth.raw  Rasmus_Depth.raw  lisa222_Depth.raw  lisa_Depth.raw  ming1_Depth.raw  ming2_Depth.raw
rs/rs_openpose/output_json/: .gitignore  Readme.md  fc.py  first_list.py  kp.py  links.json  list_all_sec.py  list_keypoints.py  myutil.py  test_proc.py
rs/sample/: CMakeLists.txt  Readme.md  build.sh  cvui.h  dist.cpp  dist.h  ir.cpp  rsutil.cpp  rsutil.h  showrs.cpp
semuse/: CMakeLists.txt  Readme.md  do_test.sh  proc1.cpp  proc2.cpp  semaphore.h
ssd/: .gitignore  CMakeLists.txt  MY_IPC.cpp  MY_IPC.ko  UEFIType.h  cvutil.cpp  cvutil.h  detector.cpp  detector.h  gg.sh  go.sh  init_myipc.sh  myipc_test.cpp  readme.md  setting-0402.json  setting.json  setting.json.300  setting.json.cut-person  shmutil.cpp  shmutil.h  ssd_detect_webcam.cpp  ssd_setting.cpp  ssd_setting.h  ssdutil.cpp  ssdutil.h
testrand/: CMakeLists.txt  main.cpp
usejson11/: CMakeLists.txt  Readme.md  all.json  json11.cpp  json11.hpp  main.cpp  mytest.cpp  mytest.h
usepbox/: CMakeLists.txt  addpath.sh  getdist.cpp  getver.cpp  main.cpp  setting.json  test.json
