cmake_minimum_required(VERSION 3.0)

project(all_opencv)

#add_subdirectory(capture)
add_subdirectory(copypaste)
add_subdirectory(fileop)
add_subdirectory(hello)
add_subdirectory(imdecode)
add_subdirectory(multi-resize)
add_subdirectory(norm)
add_subdirectory(pnp)
add_subdirectory(qrcode)
add_subdirectory(rectdraw)
add_subdirectory(resize)
add_subdirectory(simplecap)
add_subdirectory(socketest)
add_subdirectory(tracking)
add_subdirectory(viewer)
